imag alignment issue fix

--- a/src/RichTextEditor.css
+++ b/src/RichTextEditor.css
@@ -258,11 +258,4 @@
   to { opacity: 1; transform: scale(1); }
 }
 
-.scrollbar-hide::-webkit-scrollbar {
-  display: none;
-}
 
-.scrollbar-hide {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
